# redbreast

./: .gitignore  README.md  logo.aseprite  pyproject.toml  release.py  requirements.txt  setup.cfg
.github/workflows/: test-and-lint.yml
redbreast/: __init__.py  ffmpeg.py  querylist.py  testing.py
redbreast/ffmpy/: __init__.py  __main__.py  api.py  cli.py
tests/: test_ffmpy.py  test_querylist.py  test_testing.py
