[metadata]
name = redbreast
version = 1.1.2
author = Robin Neville
author_email = robin.m.neville@gmail.com
description = Robin's python utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/binnev/redbreast
project_urls =
    Bug Tracker = https://github.com/binnev/redbreast/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    django >=3.2
    typing >=3.7
    packaging >=3.0.9
[options.packages.find]
include =
    redbreast*